mail-sender/src/main/java/com/example/mailsender/error/ErrorCode.java
package com.example.mailsender.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public enum ErrorCode {

    INVALID_TOKEN(401, "Invalid Token");

    private int status;
    private String message;
}
